Fixing graphs being too small in mobile devices

--- a/Wikiproyecto-LGBT-web/src/styles.scss
+++ b/Wikiproyecto-LGBT-web/src/styles.scss
@@ -313,6 +313,7 @@ body {
     .chart {
         width: 65%;
         flex: auto;
+        min-height: 17em;
     }
 
     .chart-text {
